# Nando2Tetorisu

./: .drone.yml
HardwareSimulator/: CMakeLists.txt  main.cpp  types.hpp
HardwareSimulator/Model/: CMakeLists.txt
HardwareSimulator/Model/include/: builder.hpp  chip.hpp  executor.hpp  model.hpp  script.hpp
HardwareSimulator/Model/src/: builder.cpp  chip.cpp  executor.cpp  model.cpp  script.cpp
HardwareSimulator/Model/test/: CMakeLists.txt  test.cpp
HardwareSimulator/View/: CMakeLists.txt
HardwareSimulator/View/include/: dialog.h  mainwindow.h  pinmodel.h  pinview.h
HardwareSimulator/View/src/: dialog.cpp  mainwindow.cpp  pinmodel.cpp  pinview.cpp
HardwareSimulator/View/ui/: dialog.ui  mainwindow.ui
HardwareSimulator/ViewModel/: CMakeLists.txt
HardwareSimulator/ViewModel/include/: view_model.hpp
HardwareSimulator/ViewModel/src/: view_model.cpp
HardwareSimulator/ViewModel/viewmodel_test/: And.hdl  CMakeLists.txt  Not.hdl  Not1.hdl  test.cpp
common/: CMakeLists.txt  Observer.hpp  types.hpp
common/common_test/: CMakeLists.txt
common/include/: observer.hpp
common/src/: observer.cpp
doc/: interface.md  requirement.md  报告.md
