cmake_minimum_required(VERSION 3.0.0)
project(ViewModel VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_subdirectory(../Model Model.out)
add_subdirectory(../../common common.out)
add_library(ViewModel src/view_model.cpp include/view_model.hpp)
find_package( Threads )
target_link_libraries(ViewModel Model common  ${CMAKE_THREAD_LIBS_INIT})
ENABLE_TESTING()
add_subdirectory(viewmodel_test)